<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/venue_graphic"
            android:layout_width="244dp"
            android:layout_height="111dp"
            android:layout_gravity="center"
            android:src="@drawable/hatfieldlogo" android:layout_marginBottom="10dp" android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/venue_address_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/venue_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceLarge" android:layout_marginLeft="10sp"/>

            <TextView
                android:id="@+id/venue_hall_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hall_address"
                android:textAppearance="?android:attr/textAppearanceLarge" android:layout_marginLeft="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/venue_phone_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/venue_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textAppearance="?android:attr/textAppearanceLarge" android:layout_marginLeft="10sp"/>

            <TextView
                android:id="@+id/venue_hall_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hall_phone"
                android:textAppearance="?android:attr/textAppearanceLarge" android:layout_marginLeft="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/venue_hours_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/venue_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:textAppearance="?android:attr/textAppearanceLarge" android:layout_marginLeft="10sp"/>

            <TextView
                android:id="@+id/venue_hall_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hall_hours"
                android:textAppearance="?android:attr/textAppearanceLarge" android:layout_marginLeft="20sp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>